k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ${APP_NAME}
spec:
  #type: ClusterIP
  selector:
    app: ${APP_NAME}
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8081
